Micronaut 4 changes